# cabal

Cabal/: Cabal.cabal
Cabal-syntax/src/Distribution/FieldGrammar/: Newtypes.hs
Cabal-syntax/src/Distribution/PackageDescription/: Configuration.hs
Cabal-syntax/src/Distribution/Types/: CondTree.hs
Cabal-tests/tests/: ParserTests.hs
Cabal-tests/tests/ParserTests/trivia/: dataFiles.fieldgrammar-field  dataFiles.fieldgrammar-field-exactdoc  dataFiles.fieldgrammar-field-prettyfield  dataFiles.fragment  dataFilesMulti.fieldgrammar-field  dataFilesMulti.fieldgrammar-field-prettyfield  dataFilesMulti.fragment  dataFilesMultiExtreme.fieldgrammar-field  dataFilesMultiExtreme.fragment
Cabal/src/Distribution/: GetOpt.hs  Simple.hs
Cabal/src/Distribution/Backpack/: Configure.hs  ConfiguredComponent.hs  LinkedComponent.hs  ModuleShape.hs  PreModuleShape.hs  PreReadHsig.hs  UnifyM.hs
Cabal/src/Distribution/PackageDescription/: Check.hs
Cabal/src/Distribution/Simple/: Command.hs  Configure.hs
cabal-install/parser-tests/Tests/: ParserTests.hs
cabal-install/src/Distribution/Client/: NixStyleOptions.hs  ProjectPlanning.hs  ScriptUtils.hs  Setup.hs
cabal-install/src/Distribution/Deprecated/: ViewAsFieldDescr.hs
cabal-install/tests/: IntegrationTests2.hs
cabal-testsuite/PackageTests/Backpack/Fail3/: UnfilledSig.hsig  setup.cabal.out  setup.test.hs
cabal-testsuite/PackageTests/Backpack/Fail4/: Fail4.cabal  setup.cabal.out  setup.test.hs
cabal-testsuite/PackageTests/Backpack/Fail4/impl/: FilledSig.hs
cabal-testsuite/PackageTests/Backpack/Fail4/sig/: FilledSig.hsig
cabal-testsuite/PackageTests/Backpack/Fail5/: Fail5.cabal  setup-external-fail.out  setup-external-fail.test.hs  setup.cabal.out  setup.test.hs
cabal-testsuite/PackageTests/Backpack/Fail5/impl/: PartialSig.hs
cabal-testsuite/PackageTests/Backpack/Fail5/repo/consumer-0.1.0.0/: Main.hs  consumer.cabal
cabal-testsuite/PackageTests/Backpack/Fail5/repo/framework-0.1.0.0/: framework.cabal
cabal-testsuite/PackageTests/Backpack/Fail5/repo/framework-0.1.0.0/src/: Framework.hs
cabal-testsuite/PackageTests/Backpack/Fail5/repo/framework-0.1.0.0/src-utils/: Utils.hs
cabal-testsuite/PackageTests/Backpack/Fail5/sig/: PartialSig.hsig
(+4 files in other folders)
