cabal-version: 3.0
name:          framework
version:       0.1.0.0
build-type:    Simple

library framework-utils
  exposed-modules:  Utils
  hs-source-dirs:   src-utils
  build-depends:    base
  default-language: Haskell2010
  visibility:       public

library
  signatures:       App
  exposed-modules:  Framework
  hs-source-dirs:   src src-sig
  build-depends:    base, framework:framework-utils
  default-language: Haskell2010
